# shiny-py

./: .gitignore  .nojekyll  01-00-info.html  01-01-welcome.html  01-02-intro-shiny.html  01-03-first-app.html  02-01-reactivity.html  02-02-dashboard.html  02-03-publish.html  03-01-welcome.html  03-02-anatomy.html  03-03-first.html  03-04-chatbot.html  04-01-modules.html  04-02-testing.html  LICENSE.md  Makefile  README.md  index.html  pyproject.toml  requirements.txt  robots.txt  search.json  setup.html  sitemap.xml  template.env  test-env.py  test-install.py
.github/workflows/: main.yml
code/02-dashboard/: app-button.py
code/04-modules/: app-03.py  app-05.py  app-06.py
code/04-modules_test/: app-01.py  app-02.py  app-04.py  app-test.py
code/05-test/: app-test-01.py  app.py  test_playwright.py  test_pytest.py
site_libs/bootstrap/: bootstrap-86aebe9cfa2df2496c9f43d7e1deada6.min.css  bootstrap-dark-8694c4a0f9b97b9b4c5169ab459bf4e5.min.css
slides/01-intro/: 00-info.html  00-info.qmd  01-welcome.html  01-welcome.qmd  02-intro-shiny.html  03-first-app.html  03-first-app.qmd
slides/02-app/: 01-reactivity.html  01-reactivity.qmd  03-publish.html  (+1 more)
website/: 01-00-info.qmd  01-01-welcome.qmd  01-02-intro-shiny.qmd  01-03-first-app.qmd  02-01-reactivity.qmd  02-02-dashboard.qmd  02-03-publish.qmd  03-01-welcome.qmd  03-02-anatomy.qmd  03-03-first.qmd  03-04-chatbot.qmd  04-01-modules.qmd  04-02-testing.qmd  _brand.yml  _quarto.yml  index.qmd  setup.qmd
workshop/: 01-code.py  01-penguin.py  app-llm.py  app-penguin.py  app-simple.py  app-tips.py  chatlas.py  tips.py
(+36 files in other folders)
