[project]
name = "posit-conf-2025-shiny-py"
version = "0.1.0.9000"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "altair",
  "anthropic",
  "anthropic[bedrock]",
  "boto3",
  "chatlas",
  "faicons",
  "ipykernel",
  "jupyter",
  "langchain",
  "langchain-anthropic",
  "langchain-openai",
  "langgraph",
  "openai",
  "palmerpenguins",
  "pandas",
  "pillow",
  "playwright",
  "plotly",
  "plotnine",
  "python-dotenv",
  "querychat",
  "requests",
  "ridgeplot",
  "seaborn",
  "shiny",
  "shinychat",
  "shinylive",
  "shinywidgets",
  "tokenizers"
]

[tool.uv.sources]
querychat = { git = "https://github.com/posit-dev/querychat" }

[dependency-groups]
dev = [
    "jupytext>=1.17.3",
    "nbconvert>=7.16.6",
]
